original-package/Case Timer/objects/Session_Time__c.object
<CustomObject>
    <description>Keep track of every session and the time associated with it.</description>
    <fields>
        <fullName>Agent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup Field to the Agent</description>
        <label>Agent</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Session_Times</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <description>Master-Detail to find case to track time on</description>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Session Times</relationshipLabel>
        <relationshipName>Session_Times</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Duration__c</fullName>
        <label>Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Manual_Entry__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Manual Entry</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Session_Time__c</fullName>
        <description>Retains each session Time</description>
        <label>Session Time</label>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>Time__c</fullName>
        <description>Time of case</description>
        <label>Time</label>
        <type>DateTime</type>
    </fields>
    <label>Session Time</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Duration__c</columns>
        <columns>Date__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Session Time Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Session Times</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>